--- a/TibiaHeleper/Windows/AdditionalModules.xaml
+++ b/TibiaHeleper/Windows/AdditionalModules.xaml
@@ -5,16 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TibiaHeleper.Windows"
         mc:Ignorable="d"
-        Title="Other" Height="300" Width="350"
-        Loaded="AssignData">
-    <Grid Margin="0,0,-24.4,0.4" Width="350">
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="21,232,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox x:Name="AHSpell" HorizontalAlignment="Left" Height="23" Margin="88,34,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="52"/>
-        <Label x:Name="AutoHasteRow" Content="Auto Haste" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Top" Height="23"/>
-        <Label x:Name="AHSpellLabel" Content="Spell" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="88,5,0,0" VerticalAlignment="Top" Width="52"/>
-        <Label x:Name="AHManaLabel" Content="Mana cost" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="145,5,0,0" VerticalAlignment="Top" Width="73"/>
-        <TextBox x:Name="AHMana" HorizontalAlignment="Left" Height="23" Margin="154,34,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="63"/>
-        <CheckBox x:Name="AHEnable" Content="Enable" HorizontalAlignment="Left" Margin="236,36,0,0" VerticalAlignment="Top" Checked="EnableAutoHaste" Unchecked="DisableAutoHate"/>
-
+        Title="Other" Height="300" Width="400"
+        Loaded="AssignData" Closed="Close">
+    <Grid Margin="0,0,-24.4,0.4" Width="400">
+        <Grid Name="AutoHaste" Margin="0,0,10,0">
+            <Button x:Name="BackButton" Content="Back" HorizontalAlignment="Left" Margin="117,221,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+            <TextBox x:Name="AHSpell" HorizontalAlignment="Left" Height="23" Margin="88,34,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="104"/>
+            <Label x:Name="AutoHasteRow" Content="Auto Haste" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Top" Height="23"/>
+            <Label x:Name="AHSpellLabel" Content="Spell" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="88,5,0,0" VerticalAlignment="Top" Width="104"/>
+            <Label x:Name="AHManaLabel" Content="Mana cost" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="205,3,0,0" VerticalAlignment="Top" Width="73"/>
+            <TextBox x:Name="AHMana" HorizontalAlignment="Left" Height="23" Margin="214,32,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="63"/>
+            <CheckBox x:Name="AHEnable" Content="Enable" HorizontalAlignment="Left" Margin="296,34,0,0" VerticalAlignment="Top" Checked="EnableAutoHaste" Unchecked="DisableAutoHate"/>
+        </Grid>
+        <Grid Name="Sio" Margin="0,30,0,44">
+            <TextBox x:Name="PlayerName" HorizontalAlignment="Left" Height="23" Margin="88,67,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="100"/>
+            <TextBox x:Name="PlayerHpPercent" HorizontalAlignment="Left" Height="23" Margin="207,66,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="71"/>
+            <Label x:Name="SioRow" Content="Sio Player" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top" Height="24"/>
+            <Label x:Name="PlayerNameLabel" Content="Player Name" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="88,36,0,0" VerticalAlignment="Top" Width="100"/>
+            <CheckBox x:Name="SioEnable" Content="Enable" HorizontalAlignment="Left" Margin="298,69,0,0" VerticalAlignment="Top" Checked="EnableSio" Unchecked="DisableSio"/>
+            <Label x:Name="HPPercentLabel" Content="HP %" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="207,36,0,0" VerticalAlignment="Top" Width="71"/>
+        </Grid>
+        <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden">
+            <Label x:Name="ErrorLabel" Content="Unacceptable value" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
+            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="115,217,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
+        </Grid>
     </Grid>
 </Window>
