--- a/TibiaHeleper/Windows/Targeting.xaml
+++ b/TibiaHeleper/Windows/Targeting.xaml
@@ -30,5 +30,6 @@
             <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
             <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="115,217,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
         </Grid>
+        <CheckBox x:Name="FollowTargetCheckBox" Content="Follow Target" HorizontalAlignment="Left" Margin="290,168,0,0" VerticalAlignment="Top" Width="81" Height="18"/>
     </Grid>
 </Window>
