--- a/TibiaHeleper/Windows/WalkerWindow.xaml
+++ b/TibiaHeleper/Windows/WalkerWindow.xaml
@@ -8,54 +8,76 @@
         ResizeMode="NoResize"
         Title="Walker" Height="320" Width="660" Loaded="Load" Closed="Close">
     <Grid>
-        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="208" Margin="10,10,0,0" VerticalAlignment="Top" Width="137"/>
-        <Button x:Name="UpButton" Content="Up" HorizontalAlignment="Left" Margin="10,223,0,0" VerticalAlignment="Top" Width="63" Click="Up"/>
-        <Button x:Name="DownButton" Content="Down" HorizontalAlignment="Left" Margin="78,223,0,0" VerticalAlignment="Top" Width="69" Click="Down"/>
-        <Button x:Name="EditButton" Content="Edit" HorizontalAlignment="Left" Margin="10,246,0,0" VerticalAlignment="Top" Width="63"/>
-        <Button x:Name="DeleteButton" Content="Delete" HorizontalAlignment="Left" Margin="78,247,0,0" VerticalAlignment="Top" Width="69" Click="Delete"/>
+        <ListBox x:Name="listBox" SelectionMode="Single" HorizontalAlignment="Left" Height="208" Margin="10,10,0,0" VerticalAlignment="Top" Width="137"/>
+        <Grid Name="BasicsWalkerOperationsGrid">
+            <Button x:Name="UpButton" Content="Up" HorizontalAlignment="Left" Margin="10,223,0,0" VerticalAlignment="Top" Width="63" Click="Up"/>
+            <Button x:Name="DownButton" Content="Down" HorizontalAlignment="Left" Margin="78,223,0,0" VerticalAlignment="Top" Width="69" Click="Down"/>
+            <Button x:Name="EditButton" Content="Edit" HorizontalAlignment="Left" Margin="10,246,0,0" VerticalAlignment="Top" Width="63"/>
+            <Button x:Name="DeleteButton" Content="Delete" HorizontalAlignment="Left" Margin="78,247,0,0" VerticalAlignment="Top" Width="69" Click="Delete"/>
 
-        <Label x:Name="TrackingLabel" Content="Tracking" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="167,12,0,0" VerticalAlignment="Top" Width="163"/>
-        <Button x:Name="startButton" Content="Start" HorizontalAlignment="Left" Margin="193,38,0,0" VerticalAlignment="Top" Width="51" Click="StartTracking"/>
-        <Button x:Name="stopButton" Content="Stop" HorizontalAlignment="Left" Margin="259,38,0,0" VerticalAlignment="Top" Width="51" Click="StopTracking"/>
-        <Button x:Name="AccuracyButton" Content="Set Accuracy" HorizontalAlignment="Left" Margin="223,68,0,0" VerticalAlignment="Top" Width="107" Height="23" Click="SetAccuracy"/>
-        <TextBox x:Name="Accuracy" HorizontalAlignment="Left" Height="23" Margin="167,69,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="51"/>
-        <TextBox x:Name="startLabel" HorizontalAlignment="Left" Height="23" Margin="167,106,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="51"/>
-        <Button x:Name="SetStartLabelButton" Content="Set Start Label" HorizontalAlignment="Left" Margin="225,105,0,0" VerticalAlignment="Top" Width="107" Height="24" Click="SetStartLabel"/>
+            <Label x:Name="TrackingLabel" Content="Tracking" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="167,12,0,0" VerticalAlignment="Top" Width="163"/>
+            <Button x:Name="startButton" Content="Start" HorizontalAlignment="Left" Margin="193,38,0,0" VerticalAlignment="Top" Width="51" Click="StartTracking"/>
+            <Button x:Name="stopButton" Content="Stop" HorizontalAlignment="Left" Margin="259,38,0,0" VerticalAlignment="Top" Width="51" Click="StopTracking"/>
+            <Button x:Name="AccuracyButton" Content="Set Accuracy" HorizontalAlignment="Left" Margin="225,68,0,0" VerticalAlignment="Top" Width="107" Height="23" Click="SetAccuracy"/>
+            <TextBox x:Name="Accuracy" HorizontalAlignment="Left" Height="23" Margin="167,69,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="51"/>
+            <TextBox x:Name="startLabel" HorizontalAlignment="Left" Height="23" Margin="167,106,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="51"/>
+            <Button x:Name="SetStartLabelButton" Content="Set Start Label" HorizontalAlignment="Left" Margin="225,105,0,0" VerticalAlignment="Top" Width="107" Height="24" Click="SetStartLabel"/>
 
-        <Button x:Name="labelButton" Content="Add Label" HorizontalAlignment="Left" FontSize="10" Margin="279,162,0,0" VerticalAlignment="Top" Width="51" Height="23" Click="AddLabel"/>
-        <TextBox x:Name="LabelTextBox" HorizontalAlignment="Left" Height="23" Margin="167,161,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="107"/>
+            <Button x:Name="labelButton" Content="Add Label" HorizontalAlignment="Left" FontSize="10" Margin="279,162,0,0" VerticalAlignment="Top" Width="51" Height="23" Click="AddLabel"/>
+            <TextBox x:Name="LabelTextBox" HorizontalAlignment="Left" Height="23" Margin="167,161,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="107"/>
 
-        <Button x:Name="AddActionButton" Content="Add Action" HorizontalAlignment="Left" Margin="354,237,0,0" VerticalAlignment="Top" Width="174" Click="AddAction"/>
+            <Button x:Name="AddActionButton" Content="Add Action" HorizontalAlignment="Left" Margin="346,237,0,0" VerticalAlignment="Top" Width="174" Click="AddAction"/>
+            <Button x:Name="ProcedureButton" Content="Procedure" HorizontalAlignment="Left" Margin="532,237,0,0" VerticalAlignment="Top" Width="101" Click="Procedure"/>
 
-        <Button x:Name="SaveButton" Content="Save" HorizontalAlignment="Left" Margin="167,237,0,0" VerticalAlignment="Top" Width="83" Click="Save"/>
-        <Button x:Name="BackButton" Content="Back" HorizontalAlignment="Left" Margin="255,237,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
-        <Label x:Name="InformationLabel" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Margin="167,256,10,0.4" Content="Not Logged In" FontSize="10" Foreground="#00f000"/>
-
-        <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden">
-            <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
-            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="115,217,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
+            <Button x:Name="SaveButton" Content="Save" HorizontalAlignment="Left" Margin="167,237,0,0" VerticalAlignment="Top" Width="83" Click="Save"/>
+            <Button x:Name="BackButton" Content="Back" HorizontalAlignment="Left" Margin="255,237,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+            <Label x:Name="InformationLabel" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Margin="167,256,10,0.4" Content="Not Logged In" FontSize="10" Foreground="#00f000"/>
         </Grid>
 
+
         <Grid Name="ActionGrid" Margin="337,0,0,0.4">
-            <Grid Name="PositionGrid" Margin="0,26,111.2,165" Visibility="Hidden">
-                <TextBox x:Name="XPositionTextBox" HorizontalAlignment="Left" Height="23" Margin="4,36,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="62"/>
-                <TextBox x:Name="YPositionTextBox" HorizontalAlignment="Left" Height="23" Margin="71,36,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="63"/>
-                <TextBox x:Name="FloorTextBox" HorizontalAlignment="Left" Height="23" Margin="138,36,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="45"/>
-                <Label x:Name="XPositionLabel" Content="X Position" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="4,10,0,0" VerticalAlignment="Top" Width="62"/>
-                <Label x:Name="YPositionLabel" Content="Y Position" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="71,10,0,0" VerticalAlignment="Top" Width="63"/>
-                <Label x:Name="FloorLabel" Content="Floor" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="138,10,0,0" VerticalAlignment="Top" Width="45"/>
-                <Button x:Name="GetMyCoordinatesButton" Content="Get Actual Position" HorizontalAlignment="Left" Margin="4,66,0,0" VerticalAlignment="Top" Width="179" Click="GetMyCoordinates" Height="23"/>
+
+            <Grid Name="PositionGrid" Margin="0,4,110.6,165" Visibility="Visible">
+                <Button x:Name="NorthButton" Content="N" HorizontalAlignment="Left" Margin="5,7,0,0" VerticalAlignment="Top" Width="20" Click="North"/>
+                <Button x:Name="SouthButton" Content="S" HorizontalAlignment="Left" Margin="30,7,0,0" VerticalAlignment="Top" Width="20" Click="South"/>
+                <Button x:Name="EastButton" Content="E" HorizontalAlignment="Left" Margin="55,7,0,0" VerticalAlignment="Top" Width="20" Click="East"/>
+                <Button x:Name="WestButton" Content="W" HorizontalAlignment="Left" Margin="80,7,0,0" VerticalAlignment="Top" Width="20" Click="West"/>
+                <Button x:Name="FloorUpButton" Content="Up" HorizontalAlignment="Left" Margin="105,7,0,0" VerticalAlignment="Top" Width="36" Click="FloorUp"/>
+                <Button x:Name="FloorDownButton" Content="Down" HorizontalAlignment="Left" Margin="146,7,0,0" VerticalAlignment="Top" Width="34" Click="FloorDown"/>
+                <TextBox x:Name="XPositionTextBox" HorizontalAlignment="Left" Height="23" Margin="5,52,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="62"/>
+                <TextBox x:Name="YPositionTextBox" HorizontalAlignment="Left" Height="23" Margin="72,52,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="63"/>
+                <TextBox x:Name="FloorTextBox" HorizontalAlignment="Left" Height="23" Margin="138,52,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="45"/>
+                <Label x:Name="XPositionLabel" Content="X Position" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="5,26,0,0" VerticalAlignment="Top" Width="62"/>
+                <Label x:Name="YPositionLabel" Content="Y Position" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="72,26,0,0" VerticalAlignment="Top" Width="63"/>
+                <Label x:Name="FloorLabel" Content="Floor" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="139,26,0,0" VerticalAlignment="Top" Width="45"/>
+                <Button x:Name="GetMyCoordinatesButton" Content="Get Actual Position" HorizontalAlignment="Left" Margin="5,82,0,0" VerticalAlignment="Top" Width="179" Click="GetMyCoordinates" Height="23"/>
             </Grid>
+
             <Grid Name="MouseClickGrid" Margin="0,130,111.2,135" Visibility="Hidden">
                 <CheckBox x:Name="RightClickCheckBox" Content="Right Mouse Button Click" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Width="170"/>
             </Grid>
-            <Grid Name="TextActionGrid" Margin="0,160,111.2,55" Visibility="Hidden">
+
+            <Grid Name="TextActionGrid" Margin="0,160,111.2,55" Visibility="Visible">
                 <Label x:Name="InputDescriptionLabel" Content="Hotkey" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,9,0,0" VerticalAlignment="Top" Width="175"/>
                 <TextBox x:Name="ActionTextBox" HorizontalAlignment="Left" Height="23" Margin="10,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="175"/>
             </Grid>
 
             <Label x:Name="ActionTypeLabel" Content="Action Type" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="195,10,0,0" VerticalAlignment="Top" Width="101"/>
             <ListBox x:Name="ActionsListBox" HorizontalAlignment="Left" Padding="0" Height="183" Margin="195,41,0,0" VerticalAlignment="Top" Width="101" SelectionChanged="ActionSelected" />
+        </Grid>
+
+        <Grid Name="ProcedureGrid" Visibility="Hidden">
+            <Button x:Name="SaveProcedureButton" Content="Save Procedure" HorizontalAlignment="Left" Margin="166,237,0,0" VerticalAlignment="Top" Width="96" Click="SaveProcedure"/>
+            <Button x:Name="LoadProcedureButton" Content="Load Procedure" HorizontalAlignment="Left" Margin="267,237,0,0" VerticalAlignment="Top" Width="99" Click="LoadProcedure"/>
+            <Button x:Name="CancelProcedureButton" Content="Cancel" HorizontalAlignment="Left" Margin="371,237,0,0" VerticalAlignment="Top" Width="75" Click="HideProcedureGrid"/>
+            <Button x:Name="SelectAllButton" Content="Select All" HorizontalAlignment="Left" Margin="230,191,0,0" VerticalAlignment="Top" Width="75" Click="SelectAll"/>
+            <Button x:Name="DeselectAllButton" Content="Deselect All" HorizontalAlignment="Left" Margin="331,191,0,0" VerticalAlignment="Top" Width="75" Click="DeselectAll"/>
+
+        </Grid>
+
+        <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden">
+            <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
+            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="115,217,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
         </Grid>
     </Grid>
 </Window>
