--- a/TibiaHeleper/Windows/Menu.xaml
+++ b/TibiaHeleper/Windows/Menu.xaml
@@ -17,7 +17,7 @@
         <Button x:Name="WalkerButton" Content="Walker" HorizontalAlignment="Left" Margin="10,89,0,0" VerticalAlignment="Top" Width="97" Click="WalkerButtonClicked"/>
         <CheckBox x:Name="TargetingEnable" Content="Enable Targeting" HorizontalAlignment="Left" Margin="125,55,0,0" VerticalAlignment="Top" Width="127" Checked="TargetingRun" Unchecked="TargetingDisable"/>
         <Button x:Name="TestButton" Content="Test" HorizontalAlignment="Left" Margin="10,272,0,0" VerticalAlignment="Top" Width="97" Click="Test"/>
-        <CheckBox x:Name="WalkerEnable" Content="Enable Worker" HorizontalAlignment="Left" Margin="125,93,0,0" VerticalAlignment="Top" Width="97" Checked="WorkerRun" Unchecked="WorkerDisable"/>
+        <CheckBox x:Name="WalkerEnable" Content="Enable Walker" HorizontalAlignment="Left" Margin="125,93,0,0" VerticalAlignment="Top" Width="97" Checked="WorkerRun" Unchecked="WorkerDisable"/>
         <Button x:Name="HelpButton" Content="Help" HorizontalAlignment="Left" Margin="10,239,0,0" VerticalAlignment="Top" Width="97" Click="OpenHelpWindow"/>
     </Grid>
 </Window>
